WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124411
Memory leaks with autoLoadImages off
https://bugs.webkit.org/show_bug.cgi?id=124411
Summary
Memory leaks with autoLoadImages off
Allan Sandfeld Jensen
Reported
2013-11-15 07:14:33 PST
If you browse around with autoLoadImages disabled you will noticed the memory consumption constantly increasing. The image objects are still reachable though and are deleted on application exit instead of on page exit.
Attachments
Patch
(1.67 KB, patch)
2013-11-15 07:17 PST
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2013-11-15 07:17:46 PST
Created
attachment 217050
[details]
Patch
Darin Adler
Comment 2
2014-07-12 16:39:04 PDT
Comment on
attachment 217050
[details]
Patch Is there some way to make a regression tests for this? Normally we require a test for any bug fix.
WebKit Commit Bot
Comment 3
2014-07-12 17:10:48 PDT
Comment on
attachment 217050
[details]
Patch Clearing flags on attachment: 217050 Committed
r171036
: <
http://trac.webkit.org/changeset/171036
>
WebKit Commit Bot
Comment 4
2014-07-12 17:10:53 PDT
All reviewed patches have been landed. Closing bug.
Allan Sandfeld Jensen
Comment 5
2014-07-13 04:16:37 PDT
(In reply to
comment #2
)
> (From update of
attachment 217050
[details]
) > Is there some way to make a regression tests for this? Normally we require a test for any bug fix.
Not sure. Some of the tools lists the live objects on exit, and if you finish with a full garbage collect that can be used to check for leaks, but I don't know any way to use that in our current testing infrastructure.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug