Memory leaks with autoLoadImages off https://bugs.webkit.org/show_bug.cgi?id=124411

Reviewed by Darin Adler.

Do not emit notifyFinished for images with deferred load,
and allow deferred loads to be cancelled.

* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::checkNotify):
(WebCore::CachedResource::cancelLoad):


Canonical link: https://commits.webkit.org/152808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171036 268f45cc-cd09-0410-ab3c-d52691b4dbfc